# http-monitor

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  README.md  _config.yaml  dev.Dockerfile  git-uncommit  git-wip  git-wipe  update
.banksh/: CNAME  LICENSE  test  update
.banksh/.github/workflows/: test.yml
.banksh/_layouts/: default.html
.banksh/ideas/: channels.bash  classes.bash  index.md  robust-error-handling.md
.banksh/lib/: channels  exceptions
.banksh/lib/channels.wip-tests/: large.spec.bash  noop.spec.bash  not-a-server.spec.bash  siblings.spec.bash  single.spec.bash  too-large.spec.bash
.banksh/lib/channels.wip-tests/__snapshots__/: large.txt  single.txt  tee.txt  (+1 more)
.banksh/lib/exceptions.wip-tests/: exit-0.spec.bash  many-shields.spec.bash  thrown-from-string.spec.bash
.github/workflows/: rust.yml
__snapshots__/: *.txt
benches/: sample_input.rs
ideas/: channels.bash  channels.md  exceptions.bash  exceptions.txt  snapshot-testing.md
lib/: base
lib/channels.wip-tests/: tee.spec.bash
lib/channels.wip-tests/__snapshots__/: server.txt  siblings.txt
lib/exceptions.wip-tests/: catch-nothing.spec.bash  exit-1.spec.bash  exit-13.spec.bash  function-free-failure.spec.bash  nothing.spec.bash  thrown-and-caught-badly.spec.bash  thrown-and-caught.spec.bash  thrown-and-missed.spec.bash  thrown-from-string-shielded.spec.bash  undecorated-error.spec.bash
samples/: output.txt
src/: lib.rs  main.rs  merkle.sh  models.rs  monitor.rs  monitors.rs  sorted_request_iterator.rs
src/monitors/: chunked_stats_monitor.rs  mod.rs  models.rs  rolling_alerts_monitor.rs
tests/: integration_tests.rs  test_monitor.rs
