[package]
name = "dd-monitor"
version = "0.20.20"
authors = ["Jeremy Banks <_@jeremy.ca>", "Datadog"]
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.31"
argh = "0.1.3"
atty = "0.2.14"
csv = "1.1.3"
derive_more = "0.99.9"
env_logger = "0.7.1"
getset = "0.1.1"
log = "0.4.8"
rental = "0.5.5"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
thiserror = "1.0.20"
