[package]
name = "dd-monitor"
version = "0.20.20"
authors = ["Jeremy Banks <_@jeremy.ca>", "Datadog"]
publish = false
edition = "2018"

[lib]
name = "dd_monitor"
path = "src/lib.rs"

[[bin]]
name = "dd-monitor"
path = "src/main.rs"

[[bench]]
name = "sample_input"
harness = false

[dependencies]
anyhow = "1.0.31"
argh = "0.1.3"
atty = "0.2.14"
chrono = "0.4.13"
criterion = "0.3.3"
csv = "1.1.3"
derive_more = "0.99.9"
env_logger = "0.7.1"
itertools = "0.9.0"
log = "0.4.8"
serde = "1.0.114"
serde_derive = "1.0.114"
string_cache = "0.8.0"
thiserror = "1.0.20"
